[package]
name = "plao"
version = "0.1.0"
authors = ["Rafaël Naciri <rafael.naciri.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="plao"
path="src/lib.rs"

[dependencies]
typed-builder="0.8.0"

[dependencies.uuid]
version = "0.8.0"
features = ["serde", "v4"]

[dev-dependencies.tokio]
version = "1.0.1"
features=["rt-multi-thread", "macros"]